# ROS-ROS2-BOOKS

./: .gitignore  .gitmodules  LICENSE  README.md
chapter 10/cpp_simulation/: CMakeLists.txt  LICENSE  README.md
chapter 10/cpp_simulation/include/controller_lib/: pid_controller.hpp
chapter 10/cpp_simulation/include/filter_lib/: averagefilter.hpp  avg_filter.hpp  avg_med_filter.hpp  first_order_filter.hpp  kalman.hpp  limit_filter.hpp  median_filter.hpp
chapter 10/cpp_simulation/include/plot_lib/: draw2d.hpp  draw3d.hpp
chapter 10/cpp_simulation/src/: filter_2D_avg.cpp  filter_2D_avg_med.cpp  filter_2D_first_order.cpp  filter_2D_limit.cpp  filter_2D_median.cpp  filter_average.cpp  filter_extend_kalman.cpp  filter_kalman_p.cpp  filter_kalman_pa.cpp  filter_particle_filter.cpp  filter_unscented_kalman.cpp
chapter 11/A_star/: A_star.py
chapter 11/DWA/: DWA.py
chapter 11/RRT/: RRT.py
chapter 11/path_planning/docs/_sources/: algorithms.rst.txt
chapter 11/path_planning/include/path_planning/: lpa_star.hpp
chapter 11/path_planning/lib/utils/src/: utils.cpp
chapter 11/path_planning/main/: main.cpp
chapter 11/path_planning/src/: lpa_star.cpp  rrt.cpp  rrt_star.cpp
chapter 2/bag_pub/scripts/: bag_pub.py
chapter 2/learning_Synchronizer/: package.xml
chapter 2/learning_Synchronizer/src/: AT.cpp  publisher1.cpp
chapter 2/learning_action/action/: Count.action
chapter 2/learning_action/src/: count_client.cpp  count_client1.cpp
chapter 2/learning_launch/: package.xml
chapter 2/learning_plugin/: CMakeLists.txt
chapter 2/learning_plugin/src/: polygon_plugins.cpp
chapter 2/learning_service/scripts/: add_client.py  turtle_spawn.py
chapter 2/learning_service/src/: add_client.cpp  turtle_vel_cmd.cpp
chapter 2/learning_topic/: package.xml
chapter 2/learning_topic/scripts/: student_publisher.py  student_subscriber.py  turtle_subscriber.py
chapter 2/learning_topic/src/: student_publisher.cpp  turtle_publisher.cpp  turtle_subscriber.cpp
chapter 2/parameter/: package.xml
chapter 2/parameter/cfg/: Tutorials.cfg
chapter 2/parameter/src/: dynamic_parameter.cpp  param_config.cpp
chapter 2/rviz_teleop_commander/: CMakeLists.txt
chapter 9/: README.md
chapter 9/darknet_ros/darknet_ros/src/: image_interface.cpp  yolo_object_detector_nodelet.cpp
chapter 9/hog_haar_person_detection/: CMakeLists.txt  README.md
chapter 9/hog_haar_person_detection/launch/: hog_haar_person_detection.launch
chapter 9/hog_haar_person_detection/src/: hog_haar_person_detection.cpp
chapter 9/ros_openpose/src/: rosOpenposeSync.cpp  testCameraReader.cpp
第一章/bag_pub/: CMakeLists.txt  package.xml
第一章/learning_Synchronizer/: CMakeLists.txt
第一章/learning_Synchronizer/msg/: Person.msg
第一章/learning_Synchronizer/src/: ApproximateTime.cpp  ExactTime.cpp  TimeSynchronizer.cpp  publisher2.cpp
第一章/learning_action/: CMakeLists.txt  package.xml
第一章/learning_action/scripts/: count_client.py  count_server.py
第一章/learning_action/src/: count_server.cpp
第一章/learning_launch/: CMakeLists.txt
第一章/learning_plugin/: package.xml  polygon_plugins.xml
第一章/learning_plugin/include/learning_plugin/: polygon_base.h  polygon_plugins.h
第一章/learning_plugin/src/: polygon_loader.cpp
第一章/learning_service/: CMakeLists.txt  package.xml
第一章/learning_service/scripts/: add_server.py  turtle_vel_cmd.py
第一章/learning_service/src/: add_server.cpp  turtle_spawn.cpp
第一章/learning_service/srv/: Add.srv
第一章/learning_topic/: CMakeLists.txt
第一章/learning_topic/msg/: Student.msg
第一章/learning_topic/scripts/: turtle_publisher.py
第一章/learning_topic/src/: student_subscriber.cpp
第一章/parameter/: CMakeLists.txt
第一章/parameter/scripts/: param_config.py
第一章/rviz_teleop_commander/: plugin_description.xml
第一章/rviz_teleop_commander/src/: teleop_pad.cpp  teleop_pad.h
第一章/test/: CMakeLists.txt  package.xml
第一章/test/src/: test  test.cpp
第五章/第二节/第一小节-Dijkstra/: Dijkstra.py
第五章/规划/A_star/: A_star.py
第五章/规划/DWA/: DWA.py
第五章/规划/Dijkstra/: Dijkstra.py
第五章/规划/HybridA_star/: HybridA_star.py  car.py  dynamic_programming_heuristic.py  reeds_shepp_path_planning.py
第五章/规划/RRT/: RRT.py
第五章/规划/RRT_star/: RRT_star.py
第四章/: README.md
第四章/adaptive_hog_people_tracker/: CMakeLists.txt  README.md  package.xml
第四章/adaptive_hog_people_tracker/include/: BoundingBox.h  FrameSize.hpp  HOGDetector.hpp  LinearSVM.hpp
第四章/adaptive_hog_people_tracker/msg/: BoundingBox.msg
第四章/adaptive_hog_people_tracker/src/: HOGDetector.cpp  LinearSVM.cpp  image_publisher.cpp  person_follower.cpp  person_tracker.cpp
第四章/apriltag_detector/: CMakeLists.txt  README.md  package.xml
第四章/apriltag_detector/config/: Available_Tag.yaml
第四章/apriltag_detector/include/apriltag_detector/: apriltag_detector.cpp
第四章/apriltag_detector/include/motion_decoder/: image_converter.hpp
第四章/apriltag_detector/launch/: asd.launch  motion_decoder.launch
第四章/apriltag_detector/msg/: DetectionTag.msg
第四章/apriltag_detector/src/: apriltag_detector.cpp  main.cpp  motion_decoder.cpp
第四章/apriltag_ws/src/apriltag_ros/: README.md
第四章/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp  yolo_object_detector_node.cpp
第四章/hog_haar_person_detection/: package.xml
第四章/hog_haar_person_detection/msg/: BoundingBox.msg  Faces.msg  Pedestrians.msg
第四章/hog_haar_person_detection/src/: hog_haar_person_detection.cpp
第四章/nsf_cps_challenge/: CMakeLists.txt  README.md  package.xml
第四章/nsf_cps_challenge/config/: tags.yaml
第四章/nsf_cps_challenge/launch/: apriltags.launch  nsf_cps_challenge.launch  openuav.launch
第四章/nsf_cps_challenge/models/apriltag/: model.config  model.sdf
第四章/nsf_cps_challenge/models/f450-3/: f450.sdf  model.config
第四章/nsf_cps_challenge/scripts/: vs_with_yolo.py  vs_without_yolo.py
第四章/nsf_cps_challenge/worlds/: nsf-2.world  test-world.world
第四章/ros_openpose/launch/: config_zed2.launch
第四章/ros_openpose/scripts/: ros_openpose_synchronous.py  visualizer.py
第四章/ros_openpose/src/: cameraReader.cpp  rosOpenposeAsync.cpp
第四章/yolov4-for-darknet_ros/darknet_ros/darknet_ros/: CMakeLists.txt
(+14 files in other folders)
