<?xml version="1.0"?>
<package format="2">
  <name>nsf_cps_challenge</name>
  <version>0.0.1</version>
  <description>NSF CPS Challenge</description>

  <maintainer email="hanand4@asu.edu">Harish</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>darknet_ros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_generation</exec_depend>
  <depend>sensor_msgs</depend>
  <export>
  </export>
</package>
